# nerv-kubernetes-client-c

./: CMakeLists.txt  OWNERS  README.md  SECURITY_CONTACTS
examples/: CMakeLists.txt
examples/auth_provider/: main.c
examples/create_pod/: main.c
examples/delete_pod/: main.c
examples/exec_provider/: list_pod_by_exec_provider.c
examples/generic/: main.c
examples/list_pod/: main.c
examples/list_pod_cpp/: k8s.h  main.cpp  pod.cpp  pod.h
examples/list_pod_incluster/: main.c
examples/multi_thread/: create_pod.c  mt.h  watch_pod.c
examples/watch_list_pod/: main.c
kubernetes/: CMakeLists.txt  README.md  openapi-generator
kubernetes/api/: AdmissionregistrationAPI.c  AdmissionregistrationAPI.h  ApiextensionsV1API.c  ApiextensionsV1API.h  ApiregistrationAPI.h  ApiregistrationV1beta1API.h  ApisAPI.h  AppsAPI.c  AppsV1API.c  AppsV1API.h  AuthenticationAPI.h  AuthorizationAPI.c  AuthorizationAPI.h  AuthorizationV1API.h  AutoscalingV2beta1API.h  BatchAPI.c  BatchV1beta1API.h  CertificatesAPI.c  CertificatesAPI.h  CoordinationAPI.h  CoordinationV1beta1API.h  CoreAPI.c  CoreV1API.c  CoreV1API.h  DiscoveryAPI.c  DiscoveryAPI.h  DiscoveryV1beta1API.c  DiscoveryV1beta1API.h  EventsV1API.h  EventsV1beta1API.c  EventsV1beta1API.h  ExtensionsAPI.h  ExtensionsV1beta1API.c  ExtensionsV1beta1API.h  FlowcontrolApiserverV1beta1API.h  InternalApiserverAPI.c  InternalApiserverV1alpha1API.c  InternalApiserverV1alpha1API.h  NetworkingAPI.c  NetworkingV1API.h  (+23 more)
kubernetes/model/: io_k8s_api_admissionregistration_v1_mutating_webhook.c  io_k8s_api_admissionregistration_v1_mutating_webhook_configuration.c  io_k8s_api_admissionregistration_v1_mutating_webhook_configuration_list.c  io_k8s_api_admissionregistration_v1_rule_with_operations.c  io_k8s_api_admissionregistration_v1_rule_with_operations.h  io_k8s_api_admissionregistration_v1_validating_webhook.h  io_k8s_api_admissionregistration_v1_validating_webhook_configuration.c  io_k8s_api_admissionregistration_v1_validating_webhook_configuration.h  io_k8s_api_admissionregistration_v1_validating_webhook_configuration_list.c  io_k8s_api_admissionregistration_v1_validating_webhook_configuration_list.h  io_k8s_api_admissionregistration_v1_webhook_client_config.h  io_k8s_api_admissionregistration_v1beta1_mutating_webhook.h  io_k8s_api_admissionregistration_v1beta1_mutating_webhook_configuration.h  io_k8s_api_admissionregistration_v1beta1_validating_webhook_configuration_list.c  io_k8s_api_admissionregistration_v1beta1_validating_webhook_configuration_list.h  io_k8s_api_admissionregistration_v1beta1_webhook_client_config.h  io_k8s_api_apiserverinternal_v1alpha1_server_storage_version.c  io_k8s_api_apiserverinternal_v1alpha1_server_storage_version.h  io_k8s_api_apiserverinternal_v1alpha1_storage_version_status.h  io_k8s_api_apps_v1_controller_revision_list.h  io_k8s_api_apps_v1_daemon_set.c  io_k8s_api_apps_v1_daemon_set.h  io_k8s_api_apps_v1_daemon_set_condition.h  io_k8s_api_apps_v1_daemon_set_list.h  io_k8s_api_apps_v1_daemon_set_spec.c  io_k8s_api_apps_v1_daemon_set_status.c  io_k8s_api_apps_v1_daemon_set_status.h  io_k8s_api_apps_v1_daemon_set_update_strategy.h  io_k8s_api_apps_v1_deployment.h  io_k8s_api_apps_v1_deployment_condition.c  io_k8s_api_apps_v1_deployment_spec.c  io_k8s_api_apps_v1_deployment_spec.h  io_k8s_api_apps_v1_deployment_status.h  io_k8s_api_apps_v1_replica_set.h  io_k8s_api_apps_v1_replica_set_list.c  io_k8s_api_apps_v1_replica_set_list.h  io_k8s_api_apps_v1_replica_set_spec.c  io_k8s_api_apps_v1_replica_set_status.h  io_k8s_api_apps_v1_rolling_update_daemon_set.c  io_k8s_api_apps_v1_rolling_update_daemon_set.h  (+502 more)
kubernetes/src/: apiClient.c
kubernetes/unit-test/: test_io_k8s_api_admissionregistration_v1_mutating_webhook.c  test_io_k8s_api_admissionregistration_v1_validating_webhook.c  test_io_k8s_api_admissionregistration_v1_validating_webhook_configuration.c  test_io_k8s_api_admissionregistration_v1_validating_webhook_configuration_list.c  test_io_k8s_api_admissionregistration_v1beta1_mutating_webhook.c  test_io_k8s_api_admissionregistration_v1beta1_mutating_webhook_configuration_list.c  test_io_k8s_api_admissionregistration_v1beta1_validating_webhook.c  test_io_k8s_api_admissionregistration_v1beta1_validating_webhook_configuration_list.c  test_io_k8s_api_admissionregistration_v1beta1_webhook_client_config.c  test_io_k8s_api_apiserverinternal_v1alpha1_storage_version_condition.c  test_io_k8s_api_apiserverinternal_v1alpha1_storage_version_status.c  test_io_k8s_api_apps_v1_controller_revision.c  test_io_k8s_api_apps_v1_deployment.c  test_io_k8s_api_apps_v1_deployment_list.c  test_io_k8s_api_apps_v1_deployment_spec.c  test_io_k8s_api_apps_v1_deployment_status.c  test_io_k8s_api_apps_v1_deployment_strategy.c  test_io_k8s_api_apps_v1_replica_set_spec.c  test_io_k8s_api_apps_v1_replica_set_status.c  test_io_k8s_api_apps_v1_rolling_update_deployment.c  test_io_k8s_api_apps_v1_rolling_update_stateful_set_strategy.c  test_io_k8s_api_apps_v1_stateful_set_condition.c  test_io_k8s_api_apps_v1_stateful_set_update_strategy.c  test_io_k8s_api_authentication_v1_bound_object_reference.c  test_io_k8s_api_authentication_v1_token_review_status.c  test_io_k8s_api_authentication_v1beta1_token_review.c  test_io_k8s_api_authentication_v1beta1_user_info.c  test_io_k8s_api_authorization_v1_local_subject_access_review.c  test_io_k8s_api_authorization_v1_resource_attributes.c  test_io_k8s_api_authorization_v1_self_subject_rules_review_spec.c  test_io_k8s_api_authorization_v1_subject_access_review_spec.c  test_io_k8s_api_authorization_v1_subject_access_review_status.c  test_io_k8s_api_authorization_v1_subject_rules_review_status.c  test_io_k8s_api_authorization_v1beta1_local_subject_access_review.c  test_io_k8s_api_authorization_v1beta1_self_subject_access_review.c  test_io_k8s_api_authorization_v1beta1_self_subject_access_review_spec.c  test_io_k8s_api_authorization_v1beta1_subject_access_review_status.c  test_io_k8s_api_authorization_v1beta1_subject_rules_review_status.c  test_io_k8s_api_autoscaling_v1_horizontal_pod_autoscaler.c  (+257 more)
utils/: alias.h  (+3 more)
(+1085 files in other folders)
